password hashed using bcrypt and mongoose  middleware

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NODE_ENV=Development
 PORT=4000
 MONGO_URI=mongodb+srv://mongoexpress:mongoexpress@cluster0.iw4kl2c.mongodb.net/mongoexpress?retryWrites=true&w=majority&appName=Cluster0
+saltRounds
+SALT_ROUNDS=12
